# perplex-server

./: .env.exp  .gitignore  README.md  client.py  main.py  pm2.json  pyproject.toml
app/: __init__.py  compress.py  search.py  settings.py
test/: __init__.py  search_exp.py  serper.py  tavily_exp.py
